tests/spec/fail/re_split_zero_length.aja
import (
    "modules/re"
)

print(re.split("a*", "bbb"))
